--- a/HW1/pom.xml
+++ b/HW1/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>HW1</artifactId>
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.1</version>
+    </dependency>
 
+</dependencies>
 
 </project>
