--- a/HW1/pom.xml
+++ b/HW1/pom.xml
@@ -11,13 +11,12 @@
 
     <artifactId>HW1</artifactId>
 <dependencies>
-    <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+    <!-- Work with Spring context -->
     <dependency>
-        <groupId>com.opencsv</groupId>
-        <artifactId>opencsv</artifactId>
-        <version>5.1</version>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>5.2.3.RELEASE</version>
     </dependency>
-
 </dependencies>
 
 </project>
