--- a/HW2/pom.xml
+++ b/HW2/pom.xml
@@ -27,5 +27,11 @@
         <version>1.18.12</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>17.0.0</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 </project>
