--- a/HW2/src/main/resources/application.properties
+++ b/HW2/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-en.csv = questioners_en_En.csv
-ru.csv = questioners_ru_Ru.csv
-app.mark = 0
-app.positiveMark = 10
+valuesMap={"en":"questioners_en_En.csv","ru":"questioners_ru_Ru.csv"}
+app.positiveMark=10
