--- a/HW2/src/main/resources/bundle.properties
+++ b/HW2/src/main/resources/bundle.properties
@@ -1,3 +1,4 @@
+language = 1.English 2. Русский
 acquaintance = Ваше имя и фамилия:
 negative = Вы не добросовестный студент
 positive = Вы добросовестный студент
