--- a/HW2/src/main/resources/bundle.properties
+++ b/HW2/src/main/resources/bundle.properties
@@ -1,7 +1,7 @@
-language = 1.English 2. Русский
+language=Type/Введите: en/ru
 acquaintance = Ваше имя и фамилия:
 negative = Вы не добросовестный студент
 positive = Вы добросовестный студент
 bye = Всего хорошего
 appeal = Уважаемый {0} {1}
-mistake = Вы ввели неправильный ответ
+mistake = Неправильное значение
