Modified by defect

--- a/HW2/src/main/resources/application.properties
+++ b/HW2/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-valuesMap={"en":"questioners_en_En.csv","ru":"questioners_ru_Ru.csv"}
+languages = {'English':'en-US', 'Russian':'ru-RU'}
+valuesMap = {'en-US':'questioners_en_En.csv', 'ru-RU':'questioners_ru_Ru.csv'}
 app.positiveMark=10
