--- a/HW2/src/main/resources/bundle.properties
+++ b/HW2/src/main/resources/bundle.properties
@@ -1,4 +1,4 @@
-language=Type/Введите: en/ru
+language = Выберите язык и введите его значение
 acquaintance = Ваше имя и фамилия:
 negative = Вы не добросовестный студент
 positive = Вы добросовестный студент
